<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Tip Calculator</string>
    <string name="app_name">DigiOz Tip Calculator</string>
    <string name="labelAmount">Enter Amount</string>
    <string name="labelPercent">Enter Tip Percentage</string>
    <string name="labelTip">The Tip Amount Is</string>
    <string name="buttonCalculate">Calculate Tip</string>

</resources>